Updates to Work with IBM Events in IBM Cloud (Hosted Kafka Instance)

--- a/src/com/speedment/livedata/agent/speedment-livedata-producer.properties
+++ b/src/com/speedment/livedata/agent/speedment-livedata-producer.properties
@@ -6,11 +6,26 @@
 
 #######################################################################################
 # IMPORTANT: PRODUCER PROPERTIES MUST BE COPIED TO customer_overrides.properties
+# TEST KAFKA INSTANCE - LOCAL
 #######################################################################################
 yfs.speedment.producer.kafka.enabled=true
 yfs.speedment.producer.kafka.topic=speedment-topic
-yfs.speedment.producer.kafka.bootstrap.servers=diab191.tympsnet.com:9092
-yfs.speedment.producer.kafka.transactional.id=SPEEDMENT_LIVE_DATA.2001.ex
+#yfs.speedment.producer.kafka.bootstrap.servers=diab191.tympsnet.com:9092
+yfs.speedment.producer.kafka.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+yfs.speedment.producer.kafka.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+#######################################################################################
+# IBM CLOUD - Connection Parameters - Need your bootstrap servers and api_key to use
+#######################################################################################
+yfs.speedment.producer.kafka.bootstrap.servers=broker-3-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-4-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-0-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-1-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-5-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-2-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093
+yfs.speedment.producer.kafka.client.dns.lookup=use_all_dns_ips
+yfs.speedment.producer.kafka.client.id=SPEEDMENT
+yfs.speedment.producer.kafka.security.protocol=SASL_SSL
+yfs.speedment.producer.kafka.sasl.mechanism=PLAIN
+yfs.speedment.producer.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="Zwz2sptnBK_BoDBagJRtpCYEWAblfkzaz0IjVhTONipa";
+yfs.speedment.producer.kafka.ssl.protocol=TLSv1.2
+yfs.speedment.producer.kafka.ssl.enabled.protocols=TLSv1.2
+yfs.speedment.producer.kafka.ssl.endpoint.identification.algorithm=HTTPS
+yfs.speedment.producer.kafka.acks=-1
 
 yfs.speedment.producer.database.enabled=false
 yfs.speedment.producer.database.DstDBType=DB2
