--- a/src/com/speedment/livedata/client/speedment-livedata-client.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client.properties
@@ -3,12 +3,36 @@
 #These properties are also used by the LiveDataKafkaToDBClient server
 #
 
+#######################################################################################
+# TEST KAFKA INSTANCE - LOCAL
+#######################################################################################
 speedment.consumer.kafka.enabled=true
 speedment.consumer.kafka.topic=speedment-topic
-speedment.consumer.kafka.bootstrap.servers=diab191.tympsnet.com:9092
 speedment.consumer.kafka.group.id=SPEEDMENT-A
 speedment.consumer.kafka.auto.offset.reset=earliest
 speedment.consumer.kafka.enable.auto.commit=false
+speedment.consumer.kafka.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+speedment.consumer.kafka.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+#speedment.consumer.kafka.bootstrap.servers=diab191.tympsnet.com:9092
+
+#######################################################################################
+# IBM CLOUD - Connection Parameters - Need your bootstrap servers and api_key to use
+#######################################################################################
+speedment.consumer.api_key=Zwz2sptnBK_BoDBagJRtpCYEWAblfkzaz0IjVhTONipa
+speedment.consumer.kafka.bootstrap.servers=broker-3-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-4-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-0-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-1-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-5-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-2-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093
+speedment.consumer.kafka.client.dns.lookup=use_all_dns_ips
+speedment.consumer.kafka.client.id=SPEEDMENT
+
+speedment.consumer.kafka.security.protocol=SASL_SSL
+speedment.consumer.kafka.sasl.mechanism=PLAIN
+speedment.consumer.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="Zwz2sptnBK_BoDBagJRtpCYEWAblfkzaz0IjVhTONipa";
+speedment.consumer.kafka.ssl.protocol=TLSv1.2
+speedment.consumer.kafka.ssl.enabled.protocols=TLSv1.2
+speedment.consumer.kafka.ssl.endpoint.identification.algorithm=HTTPS
+speedment.consumer.kafka.acks=-1
+
+
 # note must set enable.auto.commit=true for this property to matter
 #speedment.consumer.kafka.auto.commit.interval.ms=5000
 
