Added Managed IBM Cloud Properties

--- a/src/com/speedment/livedata/agent/speedment-livedata-producer.properties
+++ b/src/com/speedment/livedata/agent/speedment-livedata-producer.properties
@@ -33,7 +33,8 @@ yfs.speedment.producer.database.DstDBServer=diab193.tympsnet.com
 yfs.speedment.producer.database.DstDBPort=50000
 yfs.speedment.producer.database.DSTDatabase=OMDB
 yfs.speedment.producer.database.DstDBUsername=demouser
-#our database password has been encrypted by the live data agent's encrypter class
+
+#the database password has been encrypted by the live data agent's encrypter class
 yfs.speedment.producer.database.DstDBPassword=encrypted:tOP9JTF5Oen5T/YvKg+FGg==:TXo2ulYrllOJTAF7KDgYLM6JldCPO0QaILzxkyqcjj4=
 yfs.speedment.producer.database.DstDBSchema=OMDB
 
