Fixed Kafka Initialization to exclude unnecessary properties.

--- a/speedment-livedata-client.properties
+++ b/speedment-livedata-client.properties
@@ -19,7 +19,7 @@ speedment.consumer.kafka.value.deserializer=org.apache.kafka.common.serializatio
 #######################################################################################
 # IBM CLOUD - Connection Parameters - Need your bootstrap servers and api_key to use
 #######################################################################################
-speedment.consumer.api_key=Zwz2sptnBK_BoDBagJRtpCYEWAblfkzaz0IjVhTONipa
+speedment.consumer.ibm.cloud.api_key=Zwz2sptnBK_BoDBagJRtpCYEWAblfkzaz0IjVhTONipa
 speedment.consumer.kafka.bootstrap.servers=broker-3-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-4-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-0-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-1-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-5-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093,broker-2-2lxkj61qqwq0r2hp.kafka.svc02.us-south.eventstreams.cloud.ibm.com:9093
 speedment.consumer.kafka.client.dns.lookup=use_all_dns_ips
 speedment.consumer.kafka.client.id=SPEEDMENT
@@ -30,7 +30,6 @@ speedment.consumer.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain
 speedment.consumer.kafka.ssl.protocol=TLSv1.2
 speedment.consumer.kafka.ssl.enabled.protocols=TLSv1.2
 speedment.consumer.kafka.ssl.endpoint.identification.algorithm=HTTPS
-speedment.consumer.kafka.acks=-1
 
 
 # note must set enable.auto.commit=true for this property to matter
