Fixed Database property for D: vs C: drive

--- a/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
@@ -39,7 +39,7 @@ speedment.consumer.database.enabled=true
 speedment.consumer.database.DstDBType=sqlite
 speedment.consumer.database.DstDBServer=oms.omfulfillment.com
 speedment.consumer.database.DstDBPort=50000
-speedment.consumer.database.DSTDatabase=C:/\DIAB95_CLIENT/\Runtime/\sqlite/\database/\speedment.db
+speedment.consumer.database.DSTDatabase=D:/\DIAB95_CLIENT/\Runtime/\sqlite/\database/\speedment.db
 speedment.consumer.database.DstDBUsername=demouser
 #our database password is encrypted
 speedment.consumer.database.DstDBPassword=encrypted:tOP9JTF5Oen5T/YvKg+FGg==:TXo2ulYrllOJTAF7KDgYLM6JldCPO0QaILzxkyqcjj4=
