addition updates for data modules
addition updates for data modules

--- a/src/com/speedment/livedata/client/speedment-livedata-client.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client.properties
@@ -71,3 +71,5 @@ speedment.consumer.cloudobjectstorage.serviceCRN=crn:v1:bluemix:public:cloud-obj
 speedment.consumer.cloudobjectstorage.bucketName=perfaware-cos-bucket
 speedment.consumer.cloudobjectstorage.bucketLocation=us-south
 speedment.consumer.cloudobjectstorage.tenantId=6a0a4b3d-fe6f-4027-8221-05a689e0c0e6
+speedment.consumer.cloudobjectstorage.saveToFile=true
+speedment.consumer.cloudobjectstorage.fileLocation=C:\\cos\\tmp\\
