--- a/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
@@ -46,7 +46,7 @@ speedment.consumer.database.DstDBPassword=encrypted:tOP9JTF5Oen5T/YvKg+FGg==:TXo
 speedment.consumer.database.DstDBSchema=OMDB
 
 # columns that need to be url decoded - typically description columns and it needs to match up with Live Data Agent's version
-speedment.urlencoded.columns=ITEM_DESCRIPTION,ITEM_SHORT_DESCRIPTION,SHORT_DESCRIPTION,DESCRIPTION,EXTENDED_DESCRIPTION,IMAGE_ID
+speedment.urlencoded.columns=ITEM_DESCRIPTION,ITEM_SHORT_DESCRIPTION,SHORT_DESCRIPTION,DESCRIPTION,EXTENDED_DESCRIPTION,IMAGE_ID,ADDRESS_LINE1,COMPANY,JOB_TITLE
 
 # Log4J Properties - used to initialize log4J
 log4j.rootLogger=INFO,Appender1,Appender2
