Set Group ID to SCIS-A and removed clint.id from kafka consumer props

--- a/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
@@ -22,7 +22,7 @@ speedment.consumer.kafka.value.deserializer=org.apache.kafka.common.serializatio
 speedment.consumer.ibm.cloud.api_key=01m8vZ7s8NY5i6ZfO7-VA-QglFhAdA1ue9xTZ2osGYOF
 speedment.consumer.kafka.bootstrap.servers=broker-0-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-1-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-4-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-3-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-5-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-2-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093
 speedment.consumer.kafka.client.dns.lookup=use_all_dns_ips
-speedment.consumer.kafka.client.id=SPEEDMENT
+#speedment.consumer.kafka.client.id=SPEEDMENT
 
 speedment.consumer.kafka.security.protocol=SASL_SSL
 speedment.consumer.kafka.sasl.mechanism=PLAIN
