--- a/src/com/speedment/livedata/client/speedment-livedata-client.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client.properties
@@ -35,7 +35,7 @@ speedment.consumer.kafka.ssl.endpoint.identification.algorithm=HTTPS
 #new kafka props for SCIS
 speedment.consumer.kafka.bootstrap.servers=broker-0-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-1-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-4-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-3-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-5-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093,broker-2-z6nx4q0qrz2pccyx.kafka.svc09.us-south.eventstreams.cloud.ibm.com:9093
 speedment.consumer.kafka.topic=scis-topic
-speedment.consumer.kafka.group.id=SCIS066
+speedment.consumer.kafka.group.id=SCIS-A
 speedment.consumer.kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="01m8vZ7s8NY5i6ZfO7-VA-QglFhAdA1ue9xTZ2osGYOF";
 
 # note must set enable.auto.commit=true for this property to matter
