--- a/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
@@ -35,7 +35,7 @@ speedment.consumer.kafka.ssl.endpoint.identification.algorithm=HTTPS
 # note must set enable.auto.commit=true for this property to matter
 #speedment.consumer.kafka.auto.commit.interval.ms=5000
 
-speedment.consumer.database.enabled=true
+speedment.consumer.database.enabled=false
 speedment.consumer.database.DstDBType=sqlite
 speedment.consumer.database.DstDBServer=oms.omfulfillment.com
 speedment.consumer.database.DstDBPort=50000
@@ -67,4 +67,4 @@ speedment.consumer.cloudobjectstorage.bucketName=perfaware-cos-bucket
 speedment.consumer.cloudobjectstorage.bucketLocation=us-south
 speedment.consumer.cloudobjectstorage.tenantId=6a0a4b3d-fe6f-4027-8221-05a689e0c0e6
 speedment.consumer.cloudobjectstorage.saveToFile=true
-speedment.consumer.cloudobjectstorage.fileLocation=C:\\cos\\tmp\\
+speedment.consumer.cloudobjectstorage.fileLocation=D:/\DIAB95_CLIENT/\Runtime/\cos/\
