--- a/src/com/speedment/livedata/client/speedment-livedata-client.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client.properties
@@ -65,7 +65,7 @@ log4j.appender.Appender2.layout=org.apache.log4j.PatternLayout
 log4j.appender.Appender2.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
 
 #IBM Cloud Object Storage properties
-speedment.consumer.cloudobjectstorage.enabled=true
+speedment.consumer.cloudobjectstorage.enabled=false
 speedment.consumer.cloudobjectstorage.endPoint=s3.us-south.cloud-object-storage.appdomain.cloud
 speedment.consumer.cloudobjectstorage.apiKey=JIB0fpFRyT0V-tEBZrgJaT3H4LlgOXjOwoULLPuLm5lw
 speedment.consumer.cloudobjectstorage.serviceCRN=crn:v1:bluemix:public:cloud-object-storage:global:a/326091c9c7514e87b3cfb8759cfc206a:6060776d-5ec6-49d7-9969-5a1384ffeb4f:bucket:perfaware-cos-bucket
@@ -73,4 +73,4 @@ speedment.consumer.cloudobjectstorage.bucketName=perfaware-cos-bucket
 speedment.consumer.cloudobjectstorage.bucketLocation=us-south
 speedment.consumer.cloudobjectstorage.tenantId=6a0a4b3d-fe6f-4027-8221-05a689e0c0e6
 speedment.consumer.cloudobjectstorage.saveToFile=false
-speedment.consumer.cloudobjectstorage.fileLocation=C:\\cos\\tmp\\
+speedment.consumer.cloudobjectstorage.fileLocation=D:/\DIAB95_CLIENT/\Runtime/\cos/\
