Added some URL Encoded Fields

--- a/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
+++ b/src/com/speedment/livedata/client/speedment-livedata-client-SCIS.properties
@@ -46,7 +46,7 @@ speedment.consumer.database.DstDBPassword=encrypted:tOP9JTF5Oen5T/YvKg+FGg==:TXo
 speedment.consumer.database.DstDBSchema=OMDB
 
 # columns that need to be url decoded - typically description columns and it needs to match up with Live Data Agent's version
-speedment.urlencoded.columns=ITEM_DESCRIPTION,ITEM_SHORT_DESCRIPTION,SHORT_DESCRIPTION,DESCRIPTION,EXTENDED_DESCRIPTION,IMAGE_ID,ADDRESS_LINE1,COMPANY,JOB_TITLE
+speedment.urlencoded.columns=ITEM_DESCRIPTION,ITEM_SHORT_DESCRIPTION,SHORT_DESCRIPTION,DESCRIPTION,EXTENDED_DESCRIPTION,IMAGE_ID,ADDRESS_LINE1,ADDRESS_LINE2,COMPANY,JOB_TITLE,ORGANIZATION_NAME
 
 # Log4J Properties - used to initialize log4J
 log4j.rootLogger=INFO,Appender1,Appender2
@@ -66,5 +66,5 @@ speedment.consumer.cloudobjectstorage.serviceCRN=crn:v1:bluemix:public:cloud-obj
 speedment.consumer.cloudobjectstorage.bucketName=perfaware-cos-bucket
 speedment.consumer.cloudobjectstorage.bucketLocation=us-south
 speedment.consumer.cloudobjectstorage.tenantId=6a0a4b3d-fe6f-4027-8221-05a689e0c0e6
-speedment.consumer.cloudobjectstorage.saveToFile=false
+speedment.consumer.cloudobjectstorage.saveToFile=true
 speedment.consumer.cloudobjectstorage.fileLocation=D:/\DIAB95_CLIENT/\Runtime/\cos/\
